syntax = "proto3";

package gowing.protobuf;

option csharp_namespace = "Gowing.Protobuf.WellKnownTypes";
option go_package = "github.com/WesleyWu/ri-service-provider/gowing/gwtypes";
option java_package = "gowing.protobuf";
option java_outer_classname = "WrappersProto";
option java_multiple_files = true;
option objc_class_prefix = "GPB";

import "google/protobuf/any.proto";

// Wrapper message for array of `double`.
//
// The JSON representation for `DoubleSlice` is JSON array of numbers.
message DoubleSlice {
  // The double value.
  repeated double value = 1;
}

// Wrapper message for array of `float`.
//
// The JSON representation for `FloatSlice` is JSON array of numbers.
message FloatSlice {
  // The float value.
  repeated float value = 1;
}

// Wrapper message for array of `int64`.
//
// The JSON representation for `Int64Slice` is JSON array of numbers.
message Int64Slice {
  // The int64 value.
  repeated int64 value = 1;
}

// Wrapper message for array of `uint64`.
//
// The JSON representation for `UInt64Slice` is JSON array of numbers.
message UInt64Slice {
  // The uint64 value.
  repeated uint64 value = 1;
}

// Wrapper message for array of `int32`.
//
// The JSON representation for `Int32Slice` is JSON array of numbers.
message Int32Slice {
  // The int32 value.
  repeated int32 value = 1;
}

// Wrapper message for array of `uint32`.
//
// The JSON representation for `UInt32Slice` is JSON array of numbers.
message UInt32Slice {
  // The uint32 value.
  repeated uint32 value = 1;
}

// Wrapper message for array of `bool`.
//
// The JSON representation for `BoolSlice` is JSON array of `true` and `false` strings.
message BoolSlice {
  // The bool value.
  repeated bool value = 1;
}

// Wrapper message for array of `string`.
//
// The JSON representation for `StringSlice` is JSON array of strings.
message StringSlice {
  // The string value.
  repeated string value = 1;
}

enum OperatorType {
    EQ = 0;
    NE = 1;
    GT = 2;
    GTE = 3;
    LT = 4;
    LTE = 5;
    Like = 6;
    NotLike = 7;
    Null = 8;
    NotNull = 9;
}

enum MultiType {
    Exact = 0;
    Between = 1;
    NotBetween = 2;
    In = 3;
    NotIn = 4;
}

enum WildcardType {
    None = 0;
    Contains = 1;
    StartsWith = 2;
    EndsWith = 3;
}

message Condition {
    OperatorType operator = 1;
    MultiType multi = 2;
    WildcardType wildcard = 3;
    google.protobuf.Any value = 4;
}